Fix BSD issues with new ABI12 init process.

From Bug 34794:
"Until xf86-input-mouse-1.6.0, the MousePreInit() function exited if an
os specific PreInit function existed. It let the os-specific function finish
all initialisations that remained to be done after osInfo->PreInit() was
called.

The code in master now continues, and does things that the bsdMousePreInit()
function in bsd_mouse.c doesn't expect."

Fix up wsconsPreInit to deal with the new init process.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=34794

Signed-off-by: Alexandr Shadchin <Alexandr.Shadchin@gmail.com>
Reviewed-by: Matthieu Herrb <matthieu.herrb@laas.fr>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>